libs/@local/hashql/eval/tests/ui/graph/read/entity/unsupported-closure.jsonc
//@ run: fail
//@ description: Closures not supported in filter expressions
// biome-ignore format: readability
["let", "identity", ["fn", {"#tuple": ["T"]}, {"#struct": {"value": "T"}}, "T", "value"],
["::graph::tail::collect",
  ["::graph::body::filter",
    ["::graph::head::entities", ["::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        "identity", // This is very silly and isn't something you should probably do
         //~^ ERROR Closure definition not supported here
        "identity"
        //~^ ERROR Closure definition not supported here
      ]
    ]
  ]
]]
